--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -5,7 +5,7 @@
     <title>用户信息</title>
 </head>
 <body>
-    用户信息<br/>
-    {{ testflag | safe }}
+    code{{ code | safe }}<br/>
+    code{{ state | safe }}<br/>
 </body>
 </html>
