--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     code{{ code | safe }}<br/>
-    code{{ state | safe }}<br/>
+    state{{ state | safe }}<br/>
 </body>
 </html>
