--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -5,7 +5,10 @@
     <title>用户信息</title>
 </head>
 <body>
-    code{{ code | safe }}<br/>
-    state{{ state | safe }}<br/>
+    code：{{ code | safe }}<br/>
+    state：{{ state | safe }}<br/>
+    web_access_token：{{ web_access_token | safe }}<br/>
+    refresh_token：{{ refresh_token | safe }}<br/>
+    openid：{{ openid | safe }}<br/>
 </body>
 </html>
